@@ -20,6 +20,12 @@ Version 35    Live Server Fixes
 
 --Added flushing of server logs after 30 days to save space.
 
+--Changed the way chill timeouts are calculated.  They are now based on the
+  number of live houses on the list (5 minutes per available house), so they
+  get shorter as the house list gets shorter.  Thus, people playing during
+  times of low server population won't get stuck with no content due to long
+  chill timers.  Chill timeouts are still capped at 2 hours, matching the old
+  server behavior when the house list is very long. 
 
 
 
